# u-wanna-make-a-Database

./: CMakeLists.txt  README.md  main.cpp  test.cpp
.github/workflows/: CICD.yml  cmake-single-platform.yml
